--- a/vignettes/tcgaBiolinks.Rmd
+++ b/vignettes/tcgaBiolinks.Rmd
@@ -519,7 +519,7 @@ mutation <- GDCquery_Maf(tumor = "LGG", save.csv = TRUE)
 
 This mutation data can be visualized through a oncoprint from the  [ComplexHeatmap](http://bioconductor.org/packages/ComplexHeatmap/) package [@ref23].
 
-```{r, message=FALSE}
+```{r, echo=TRUE, message=FALSE, warning=FALSE, fig.height=6}
 mut <- GDCquery_Maf(tumor = "ACC")
 clin <- GDCquery_clinic("TCGA-ACC","clinical")
 clin <- clin[,c("bcr_patient_barcode","disease","gender","tumor_stage","race","vital_status")]
@@ -1332,26 +1332,18 @@ uses the [ComplexHeatmap](http://bioconductor.org/packages/ComplexHeatmap/) to c
 * **annotation.position** Position of the annotation "bottom" or "top"
 * **label.title** Title of the label
 
-```{r, eval = FALSE}
+```{r, echo=TRUE, fig.height=6, message=FALSE, warning=FALSE}
 mut <- GDCquery_Maf(tumor = "ACC")
 clin <- GDCquery_clinic("TCGA-ACC","clinical")
 clin <- clin[,c("bcr_patient_barcode","disease","gender","tumor_stage","race","vital_status")]
 TCGAvisualize_oncoprint(mut = mut, genes = mut$Hugo_Symbol[1:20],
-                       filename = "onco.pdf",
+                       filename = NULL,
                        annotation = clin,
                        color=c("background"="#CCCCCC","DEL"="purple","INS"="yellow","SNP"="brown"),
                        rows.font.size=10,
                        heatmap.legend.side = "right",
                        dist.col = 0,
                        label.font.size = 10)
-```
-
-The result is shown below:
-```{r, fig.width=6, fig.height=4, echo=FALSE, fig.align="center"}
-library(png)
-library(grid)
-img <- readPNG("oncoprint.png")
-grid.raster(img)
 ```
 
 The columns are the samples and the rows are genes. The upper histograms shows the number
@@ -1447,7 +1439,6 @@ In the following picture the user can see some community of genes with same colo
 
 The result is shown below:
 ```{r, fig.width=6, fig.height=4, echo=FALSE, fig.align="center"}
-
 library(png)
 library(grid)
 img <- readPNG("SurvivalCoxNETOutput.png")
@@ -1459,8 +1450,19 @@ Using the data and calculating the mean DNA methylation per group, it is possibl
 to create a mean DNA methylation boxplot with the function 
 `TCGAvisualize_meanMethylation` as follows:
 
-```{r, eval = FALSE}
-TCGAvisualize_meanMethylation(data,"group")
+```{r, echo=TRUE, fig.height=5, message=FALSE, warning=FALSE}
+query <- GDCquery(project = "TCGA-GBM",
+                  data.category = "DNA methylation",
+                  platform = "Illumina Human Methylation 27",
+                  legacy = TRUE, 
+                  barcode = c("TCGA-02-0058-01A-01D-0186-05", "TCGA-12-1597-01B-01D-0915-05",
+                              "TCGA-12-0829-01A-01D-0392-05", "TCGA-06-0155-01B-01D-0521-05",
+                              "TCGA-02-0099-01A-01D-0199-05", "TCGA-19-4068-01A-01D-1228-05",
+                              "TCGA-19-1788-01A-01D-0595-05", "TCGA-16-0848-01A-01D-0392-05"))
+GDCDownload(query)
+data <- GDCPrepare(query)
+# "shortLetterCode" is a column in the SummarizedExperiment::colData(data) matrix
+TCGAvisualize_meanMethylation(data,"shortLetterCode",filename = NULL)
 ```
 The arguments of `TCGAvisualize_meanMethylation` are:
 
@@ -1481,24 +1483,19 @@ of the subgroups. Example: shapes = c(21,23) if for two levels
 * **labels** Labels of the groups
 * **y.limits** Change lower/upper y-axis limit 
 
-The result is shown below:
-```{r, fig.width=6, fig.height=4, echo = FALSE, fig.align="center",hide=TRUE, message=FALSE,warning=FALSE}
-library(png)
-library(grid)
-img <- readPNG("meanmet.png")
-grid.raster(img)
-```
-
 Other examples using the parameters:
-```{r, eval = FALSE}
+```{r, echo=TRUE, fig.height=5, message=FALSE, warning=FALSE}
 # setting y limits: lower 0, upper 1
-TCGAvisualize_meanMethylation(data,groupCol  = "group", y.limits = c(0,1))
+TCGAvisualize_meanMethylation(data,"shortLetterCode",filename = NULL, y.limits = c(0,1))
 # setting y limits: lower 0
-TCGAvisualize_meanMethylation(data,groupCol  = "group", y.limits = 0)
+TCGAvisualize_meanMethylation(data,"shortLetterCode",filename = NULL, y.limits = 0)
 # Changing shapes of jitters to show subgroups
-TCGAvisualize_meanMethylation(data,groupCol  = "group", subgroupCol="subgroup")
+TCGAvisualize_meanMethylation(data,groupCol  = "gender", subgroupCol="vital_status", filename = NULL)
 # Sorting bars by descending mean methylation
-TCGAvisualize_meanMethylation(data,groupCol  = "group",sort="mean.desc",filename="meandesc.pdf")
+TCGAvisualize_meanMethylation(data,groupCol  = "gender",sort="mean.desc",filename=NULL)
+# Sorting bars by asc mean methylation
+TCGAvisualize_meanMethylation(data,groupCol  = "gender",sort="mean.asc",filename=NULL)
+TCGAvisualize_meanMethylation(data,groupCol  = "vital_status",sort="mean.asc",filename=NULL)
 ```
 
 
@@ -2088,7 +2085,8 @@ grid.raster(img)
 ```
 
 
-## Case study n. 3: Integration of methylation and expression for COAD
+## Case study n. 3: Integration of methylation and expression for ACC
+
 In recent years, it has been described the relationship between 
 DNA methylation and gene expression and the study of this relationship 
 is often difficult to accomplish.
@@ -2096,11 +2094,12 @@ is often difficult to accomplish.
 This case study will show the steps to investigate the relationship
 between the two types of data.
 
-First, we downloaded COAD DNA methylation data for HumanMethylation27k and HumanMethylation450k platforms, and COAD RNA expression data for IlluminaGA_RNASeqV2. 
+First, we downloaded ACC DNA methylation data for HumanMethylation450k platforms, and ACC RNA expression data for Illumina HiSeq platform. 
 
 TCGAbiolinks adds by default the subtypes classification already published by researchers.
+
 We will use this classification to do our examples. 
-So, selected the groups CIMP.L and CIMP.H to do RNA expression and DNA methylation comparison.
+So, selected the groups CIMP-low and CIMP-high to do RNA expression and DNA methylation comparison.
 
 
 ```{r,eval=FALSE,echo=TRUE,message=FALSE,warning=FALSE}
@@ -2127,23 +2126,14 @@ acc.met <- GDCPrepare(query = query.met,
 #-----------------------------------
 # 1.2 - RNA expression
 # ----------------------------------
-coad.query.exp <- TCGAquery(tumor = "coad",
-                            platform = "IlluminaGA_RNASeqV2",
-                            level = 3)
-TCGAdownload(coad.query.exp,
-             path = "expression",
-             type = "rsem.genes.results")
-
-coad.exp <- TCGAprepare(query = coad.query.exp,
-                        dir = "expression",
-                        type = "rsem.genes.results",
-                        add.subtype = TRUE,
-                        save = T,filename = "coadexp.rda")
-
-# removing the samples without subtype classification
-coad.aux <- subset(coad.met, 
-                   select = colData(coad.met)$methylation_subtype %in% c("CIMP.L","CIMP.H"))
-
+query.exp <- GDCquery(project = "TCGA-ACC", 
+                      legacy = TRUE,
+                      data.category = "Gene expression",
+                      data.type = "Gene expression quantification",
+                      platform = "Illumina HiSeq", 
+                      file.type = "results")
+GDCDownload(query.exp)
+acc.exp <- GDCPrepare(query = query.exp, save = TRUE, save.filename = "accExp.rda")
 ```
 
 We will first investigate the mean methylation of the methylation groups and highlight 
@@ -2155,44 +2145,46 @@ the hypermutated subgroup.
 #--------------------------------------------
 # 2.1 - Mean methylation of samples
 # -------------------------------------------
-TCGAvisualize_meanMethylation(coad.aux,
-                              groupCol = "methylation_subtype",
-                              subgroupCol = "hypermutated",
+TCGAvisualize_meanMethylation(acc.met,
+                              groupCol = "subtype_MethyLevel",
+                              subgroupCol = "subtype_Histology",
                               group.legend  = "Groups",
-                              subgroup.legend = "hypermutated",
-                              filename = "coad_mean.png")
+                              subgroup.legend = "Histology",
+                              filename = "acc_mean.png")
 ```
 
 The figure resulted from the code above is shown below:
 ```{r, fig.width=6, fig.height=4, echo = FALSE, fig.align="center",hide=TRUE, message=FALSE,warning=FALSE}
 library(png)
 library(grid)
-img <- readPNG("meanmet.png")
+img <- readPNG("acc_mean.png")
 grid.raster(img)
 ```
 
 For DNA methylation, we do a DMR (different methylated region) analysis, which will give the difference of DNA methylation for the probes of the groups and their significance value.
-The output can be seen in a volcano plot.
+The output can be seen in a volcano plot. 
+Note: Depending on the number of samples this function can be very slow
+due to the wilcoxon test, taking from hours to days.
 
 ```{r,eval=FALSE,echo=TRUE,message=FALSE,warning=FALSE}
 # na.omit
-coad.aux <- subset(coad.aux,subset = (rowSums(is.na(assay(coad.aux))) == 0))
+acc.met <- subset(acc.met,subset = (rowSums(is.na(assay(acc.met))) == 0))
 
 # Volcano plot
-coad.aux <- TCGAanalyze_DMR(coad.aux, groupCol = "methylation_subtype",
-                            group1 = "CIMP.H",
-                            group2="CIMP.L",
+acc.met <- TCGAanalyze_DMR(acc.met, groupCol = "subtype_MethyLevel",
+                            group1 = "CIMP-high",
+                            group2="CIMP-low",
                             p.cut = 10^-5,
                             diffmean.cut = 0.25,
                             legend = "State",
-                            plot.filename = "coad_CIMPHvsCIMPL_metvolcano.png")
+                            plot.filename = "CIMP-highvsCIMP-low_metvolcano.png")
 ```
 
 The figure resulted from the code above is shown below:
 ```{r, fig.width=6, fig.height=4, echo = FALSE, fig.align="center",hide=TRUE, message=FALSE,warning=FALSE}
 library(png)
 library(grid)
-img <- readPNG("figure5met.png")
+img <- readPNG("CIMP-highvsCIMP-low_metvolcano.png")
 grid.raster(img)
 ```
 
@@ -2203,14 +2195,13 @@ of gene expression and their significance value.
 #-------------------------------------------------
 # 2.3 - DEA - Expression analysis - volcano plot
 # ------------------------------------------------
-coad.exp.aux <- subset(coad.exp, 
-                       select = colData(coad.exp)$methylation_subtype %in% c("CIMP.H","CIMP.L"))
+acc.exp.aux <- subset(acc.exp, 
+                       select = colData(acc.exp)$subtype_MethyLevel %in% c("CIMP-high","CIMP-low"))
 
-idx <- colData(coad.exp.aux)$methylation_subtype %in% c("CIMP.H")
-idx2 <- colData(coad.exp.aux)$methylation_subtype %in% c("CIMP.L")
+idx <- colData(acc.exp.aux)$subtype_MethyLevel %in% c("CIMP-high")
+idx2 <- colData(acc.exp.aux)$subtype_MethyLevel %in% c("CIMP-low")
 
-dataPrep <- TCGAanalyze_Preprocessing(object = coad.exp.aux,
-                                      cor.cut = 0.6)
+dataPrep <- TCGAanalyze_Preprocessing(object = acc.exp.aux, cor.cut = 0.6)
 
 dataNorm <- TCGAanalyze_Normalization(tabDF = dataPrep,
                                       geneInfo = geneInfo,
@@ -2222,19 +2213,20 @@ dataFilt <- TCGAanalyze_Filtering(tabDF = dataNorm,
 
 dataDEGs <- TCGAanalyze_DEA(mat1 = dataFilt[,idx],
                             mat2 = dataFilt[,idx2],
-                            Cond1type = "CIMP.H",
-                            Cond2type = "CIMP.l",
+                            Cond1type = "CIMP-high",
+                            Cond2type = "CIMP-low",
                             method = "glmLRT")
 
 TCGAVisualize_volcano(dataDEGs$logFC,dataDEGs$FDR,
                       filename = "Case3_volcanoexp.png",
                       x.cut = 3,
-                      y.cut = 10^-4,
+                      y.cut = 10^-5,
                       names = rownames(dataDEGs),
+                      color = c("black","red","darkgreen"),
                       names.size = 2,
                       xlab = " Gene expression fold change (Log2)",
                       legend = "State",
-                      title = "Volcano plot (CIMP.l vs CIMP.H)",
+                      title = "Volcano plot (CIMP-high vs CIMP-low)",
                       width = 10)
 ```
 
@@ -2256,10 +2248,10 @@ We used only the samples that had a classification in the examples.
 #------------------------------------------
 # 2.4 - Starburst plot
 # -----------------------------------------
-starburst <- TCGAvisualize_starburst(coad.aux, dataDEGs,"CIMP.H","CIMP.L",
+starburst <- TCGAvisualize_starburst(acc.met, dataDEGs,"CIMP-high","CIMP-low",
                                      filename = "starburst.png",
                                      met.p.cut = 10^-5,
-                                     exp.p.cut = 10^-4,
+                                     exp.p.cut = 10^-5,
                                      diffmean.cut = 0.25,
                                      logFC.cut = 3,
                                      names = TRUE,
